--- a/demo.ipynb
+++ b/demo.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "a3857dda",
    "metadata": {},
    "outputs": [
@@ -23,7 +23,7 @@
        "'torch.FloatTensor'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,6 +33,13 @@
     "a=torch.randn(2,3)\n",
     "a.type()"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c1593c1f",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
